fixed alignment in the table

--- a/HW#3-CSS-Tables/css/style.css
+++ b/HW#3-CSS-Tables/css/style.css
@@ -55,7 +55,7 @@ i.white {
 }
 .search input {
   border: none;
-
+  color: #ffffff;
   padding: 0 40px;
   background: url(../img/search.svg) no-repeat #707070;
 
